tests/semantic/invalid/38_e_method_override_bad_arity.hulk
type Parent() {
    greet() => "hello";
}
type Child( ) inherits Parent() {
    greet(name:String) => "hello " @ name;
}
print(0);
